--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.20",
-    "@react-navigation/native-stack": "^7.6.3",
+    "@react-navigation/native-stack": "^7.7.0",
     "@react-navigation/stack": "^7.6.4",
+    "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
